fixed z-index to make it go under nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,6 @@ body {
   border: none;
   cursor: pointer;
   padding: 10px;
-  z-index: 1;
 }
 
 .prev {
